<resources>
    <string name="app_name">مالی کاسپین</string>
    <string name="caspian_software">نرم افزار کاسپین</string>
    <string name="action_settings">menu</string>


    <string name="welcome">به برنامه مالی کاسپین خوش آمدید</string>

    <string name="first_activity_waiting">
        درحال بارگذاری ...
    </string>

    <string name="app_full_title">نرم افزار مالی کاسپین</string>



    <!-- common -->
    <string name="enter">ورود</string>
    <string name="exit">خروج</string>
    <string name="close">بستن</string>
    <string name="error_code">کد خطا:</string>
    <string name="error_message">توضیحات:</string>
    <string name="comma">،</string>
    <string name="not_found">اطلاعات مورد نظر یافت نشد</string>


    <string name="error_title">خطا</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="success_save">با موفقیت ذخیره شد.</string>
    <string name="success_delete">با موفقیت حذف شد.</string>
    <!-- year -->
    <string name="year_title">انتخاب سال مالی</string>


    <string name="date_label">تاریخ:</string>
    <string name="date_list">تاریخ</string>


    <string name="radif">ردیف</string>

    <string name="required_info_title">ورود اطلاعات مورد نیاز</string>
    <string name="delete">حذف</string>


    <string name="description_label">توضیحات: </string>
    <string name="column_description_list">توضیحات</string>

    <string name="sending_to_server">در حال ارسال اطلاعات به سرور</string>

    <string name="reset_app_title">راه اندازی مجدد</string>
    <string name="reset_app_question">آیا میخواهید برنامه را مجددا راه اندازی کنید؟ در اینصورت کل اطلاعات برنامه پاک خواهد شد.</string>


    <string name="successful_operation">با موفقیت انجام شد.</string>

    <string name="no_person_selected">هیچ شخصی انتخاب نشده است</string>

    <string name="column_bed_list_title">بدهکار</string>
    <string name="column_bes_list_title">بستانکار</string>
    <string name="column_code_hesab_title">کدحساب</string>
    <string name="column_mande_title">مانده</string>
    <string name="column_type_mande_title">نوع</string>


    <string name="internet_dateTime_not_reachable">عدم دسترسی به سرور تاریخ/زمان. لطفا به اینترنت متصل شده و دوباره تلاش کنید</string>
</resources>
